--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
     
     <script src="js/app.js"></script>
+    <link rel="icon" href="./favicon.ico">
+
 </head>
 
 <body>
