--- a/index.html
+++ b/index.html
@@ -245,14 +245,11 @@
             <h3 class="col-md-8 col-md-offset-2" style="font-size: 32px; font-weight: bold; text-align:center; margin-bottom: 50px;">
                 <a href="https://github.com/Ericonaldo/Tracking_SAM/tree/dev" style="font-size: 28px;">Tracking SAM</a> Annotation Explain
             </h3>
-            <!-- <div class="col-md-12 text-center" style="column-gap: 40px; line-height: 50px">
-                <video id="f1" width="34%" style="border-radius: 10px;" autoplay loop muted controls>
-                    <source src="img/videos/failure-case/depth-fail.mp4" type="video/mp4" />
-                </video>&nbsp;&nbsp;&nbsp;&nbsp;
-                <video id="f2" width="34%" style="border-radius: 10px;" autoplay loop muted controls>
-                    <source src="img/videos/failure-case/seg-fail.mp4" type="video/mp4" />
+            <div class="col-md-12 text-center" style="column-gap: 40px; line-height: 50px">
+                <video id="f2" width="50%" style="border-radius: 10px;" autoplay loop muted controls>
+                    <source src="img/videos/workflow-comp.mp4" type="video/mp4" />
                 </video>
-            </div> -->
+            </div>
         </div>
 
         <div class="row" style="margin-top: 100px;">
@@ -265,7 +262,7 @@
                     <source src="img/videos/failure-case/depth-fail-comp.mp4" type="video/mp4" />
                 </video>&nbsp;&nbsp;&nbsp;&nbsp;
                 <video id="f2" width="24%" style="border-radius: 10px;" autoplay loop muted controls>
-                    <source src="img/videos/failure-case/seg-fail-comp.mp4" type="video/mp4" />
+                    <source src="img/videos/failure-case/tracking-fail-comp.mp4" type="video/mp4" />
                 </video>&nbsp;&nbsp;&nbsp;&nbsp;
                 <video id="f2" width="24%" style="border-radius: 10px;" autoplay loop muted controls>
                     <source src="img/videos/failure-case/box-fail-comp.mp4" type="video/mp4" />
