--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 <div class="col-md-4 col-md-offset-4 text-center">
                     <ul class="nav nav-pills nav-justified">
                         <li>
-                            <a href="">
+                            <a href="https://arxiv.org/abs/2403.16967">
                             <image src="img/paper-img.png" height="60px">
                                 <h4><strong>Paper</strong></h4>
                             </a>
                         </li>
                         <li>
-                            <a href="https://youtu.be/32u3e54VTsk">
+                            <a href="https://youtu.be/Kfj1ImFLoqI">
                             <image src="img/youtube_icon.png" height="60px">
                                 <h4><strong>Video</strong></h4>
                             </a>
@@ -138,7 +138,7 @@
             <div class="col-md-8 col-md-offset-2">
                 <div class="text-center">
                     <div style="position:relative;padding-top:56.25%;">
-                        <iframe src="https://www.youtube.com/embed/32u3e54VTsk?si=zbXk3seNUDtdUVBF" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+                        <iframe src="https://www.youtube.com/embed/Kfj1ImFLoqI?si=bg1q94q0zv41COTD" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
                         <!-- <div class="poster-image" style="position:absolute;top:0;left:0;width:100%;height:100%;background-image:url('img/youtube_cover.jpg');background-size:cover;background-position:center;display:block;"></div> -->
             </div>
                     </div>
