--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
                                 <h4><strong>Video</strong></h4>
                             </a>
                         </li>
+                        <li>
+                            <a href="https://b23.tv/EZEa0LS">
+                            <image src="img/bilibili.png" height="60px">
+                                <h4><strong>Bilibili</strong></h4>
+                            </a>
+                        </li>
                     </ul>
                 </div>
         </div>
