update bibili icon

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
     <meta name="twitter:image" content="img/cover.jpg" />
 
 
-<!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💫</text></svg>"> -->
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.css">
@@ -119,7 +117,7 @@
                         <li>
                             <a href="https://arxiv.org/abs/2403.16967">
                             <image src="img/paper-img.png" height="60px">
-                                <h4><strong>Paper</strong></h4>
+                                <h4><strong>Arxiv</strong></h4>
                             </a>
                         </li>
                         <li>
@@ -130,7 +128,7 @@
                         </li>
                         <li>
                             <a href="https://b23.tv/EZEa0LS">
-                            <image src="img/bilibili.png" height="60px">
+                            <image src="img/bilibili.jpeg" height="60px">
                                 <h4><strong>Bilibili</strong></h4>
                             </a>
                         </li>
