--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <li>
                             <a href="https://youtu.be/Kfj1ImFLoqI">
                             <image src="img/youtube_icon.png" height="60px">
-                                <h4><strong>Video</strong></h4>
+                                <h4><strong>YouTube</strong></h4>
                             </a>
                         </li>
                         <li>
