update twitter link

--- a/index.html
+++ b/index.html
@@ -116,20 +116,26 @@
                     <ul class="nav nav-pills nav-justified">
                         <li>
                             <a href="https://arxiv.org/abs/2403.16967">
-                            <image src="img/paper-img.png" height="60px">
+                            <image src="img/paper-img.png" height="50px">
                                 <h4><strong>Arxiv</strong></h4>
                             </a>
                         </li>
                         <li>
                             <a href="https://youtu.be/Kfj1ImFLoqI">
-                            <image src="img/youtube_icon.png" height="60px">
+                            <image src="img/youtube_icon.png" height="50px">
                                 <h4><strong>YouTube</strong></h4>
                             </a>
                         </li>
                         <li>
                             <a href="https://b23.tv/EZEa0LS">
-                            <image src="img/bilibili.jpeg" height="60px">
+                            <image src="img/bilibili.jpeg" height="50px">
                                 <h4><strong>Bilibili</strong></h4>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/xiaolonw/status/1772667935850635370">
+                            <image src="img/twitter.png" height="50px">
+                                <h4><strong>Twitter</strong></h4>
                             </a>
                         </li>
                     </ul>
