update sim videos

--- a/index.html
+++ b/index.html
@@ -71,11 +71,16 @@
                           Xuxin Cheng
                         </a>
                         <sup style="font-size: 18px;">1</sup>
-                        <!-- </br>Harvard University -->
                     </li>
                     <li>
                         <a href="https://yandongji.github.io" style="font-size: 22px;">
                           Yandong Ji
+                        </a>
+                        <sup style="font-size: 18px;">1</sup>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/rizhaoqiu" style="font-size: 22px;">
+                          Rizhao Qiu
                         </a>
                         <sup style="font-size: 18px;">1</sup>
                         <!-- </br>Google -->
@@ -85,14 +90,12 @@
                           Ruihan Yang
                         </a>
                         <sup style="font-size: 18px;">1</sup>
-                        <!-- </br>Google -->
                     </li>
                     <li>
                         <a href="https://xiaolonw.github.io" style="font-size: 22px;">
                           Xiaolong Wang
                         </a>
                         <sup style="font-size: 18px;">1</sup>
-                        <!-- </br>Google -->
                     </li><br>
                     <li>
                         <sup style="font-size: 18px;">1</sup><font size="5">UC San Diego</font>
