--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
                             </a>
                         </li>
                         <li>
+                            <a href="https://github.com/Ericonaldo/visual_wholebody">
+                            <image src="img/github.png" height="50px">
+                                <h4><strong>Code</strong></h4>
+                            </a>
+                        </li>
+                        <li>
                             <a href="https://youtu.be/Kfj1ImFLoqI">
                             <image src="img/youtube_icon.png" height="50px">
                                 <h4><strong>YouTube</strong></h4>
