--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
                     </li><br>
                     <li>
                         <sup style="font-size: 14px;">*</sup><font size="4">Equal contribution.</font>
+                    </li><br>
+                    <li>
+                        <sup style="font-size: 18px;">*</sup><font size="5">CoRL 2024</font>
                     </li>
                 </ul>
             </div>
@@ -332,8 +335,8 @@
                 <pre><code>
 @article{liu2024visual,
 title={Visual Whole-Body Control for Legged Loco-Manipulation},
-author={Liu, Minghuan and Chen, Zixuan and Cheng, Xuxin and Ji, Yandong and Yang, Ruihan and Wang, Xiaolong},
-journal={arXiv preprint arXiv:2403.16967},
+author={Liu, Minghuan and Chen, Zixuan and Cheng, Xuxin and Ji, Yandong and Qiu, Rizhao and Yang, Ruihan and Wang, Xiaolong},
+journal={CoRL},
 year={2024}
 }
                 </code></pre>
