--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <sup style="font-size: 14px;">*</sup><font size="4">Equal contribution.</font>
                     </li><br>
                     <li>
-                        <sup style="font-size: 18px;">*</sup><font size="5">CoRL 2024</font>
+                       <font size="5">CoRL 2024</font>
                     </li>
                 </ul>
             </div>
