--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     </li><br>
                     <li>
                        <font size="5">CoRL 2024</font>
+                    <em><strong><font color="red" size="5">(Oral)</font></strong></em>
                     </li>
                 </ul>
             </div>
@@ -336,7 +337,7 @@
 @article{liu2024visual,
 title={Visual Whole-Body Control for Legged Loco-Manipulation},
 author={Liu, Minghuan and Chen, Zixuan and Cheng, Xuxin and Ji, Yandong and Qiu, Rizhao and Yang, Ruihan and Wang, Xiaolong},
-journal={CoRL},
+journal={The 8th Conference on Robot Learning},
 year={2024}
 }
                 </code></pre>
