change the tracking sam video

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     We only assign object masks to be grasped by this tool, after annotation all pickup behaviors are automatically performed.<br>
                 </p></div>
                 <video id="f2" width="50%" style="border-radius: 10px;" autoplay loop muted controls>
-                    <source src="img/videos/workflow-comp.mp4" type="video/mp4" />
+                    <source src="img/videos/workflow.mp4" type="video/mp4" />
                 </video>
             </div>
         </div>
